pkglib_LIBRARIES = libgslpermutation.a 

pkginclude_HEADERS = gsl_permutation.h

INCLUDES= -I$(top_builddir)

libgslpermutation_a_SOURCES = init.c file.c permutation.c

#TESTS = test

#check_PROGRAMS = test

#test_SOURCES = test.c
#test_DEPENDENCIES = libgslpermutation.a
#test_LDADD = ../err/libgslerr.a ../err/libgsltest.a ../utils/libutils.a

#CLEANFILES = test.txt test.dat


