noinst_LTLIBRARIES = libgslpermutation.la 

pkginclude_HEADERS = gsl_permutation.h

INCLUDES= -I$(top_builddir)

libgslpermutation_la_SOURCES = init.c file.c permutation.c

#TESTS = test

#check_PROGRAMS = test

#test_SOURCES = test.c
#test_DEPENDENCIES = libgslpermutation.la
#test_LDADD = ../err/libgslerr.la ../err/libgsltest.la ../utils/libutils.la

#CLEANFILES = test.txt test.dat


